<menu xmlns:android="http://schemas.android.com/apk/res/android" >
   
    <item 
       android:id="@+id/sigle_article_action_share"
       android:icon="@drawable/sha"
       android:title="@string/action_share"
       android:showAsAction="ifRoom"
       />
    <item  
        android:id="@+id/sigle_article_action_font_plus"
        android:icon="@drawable/fou"
        android:title="@string/action_font_plus"
        android:showAsAction="ifRoom"/> 
    <item  
        android:id="@+id/sigle_article_action_font_minus"
        android:icon="@drawable/fod"
        android:title="@string/action_font_minus"
        android:showAsAction="ifRoom"/> 
    <item  
        android:id="@+id/sigle_article_action_bright_plus"
        android:icon="@drawable/bu"
        android:title="@string/action_bright_plus"
        android:showAsAction="ifRoom"/> 
    <item  
        android:id="@+id/sigle_article_action_bright_minus"
        android:icon="@drawable/bd"
        android:title="@string/action_bright_minus"
        android:showAsAction="ifRoom"/> 
    <item  
        android:id="@+id/sigle_article_action_mode"
        android:icon="@drawable/mod"
        android:title="@string/action_mode"
        android:showAsAction="ifRoom"/> 
</menu>
